---
source: src/core/config/transformer/type_merger/type_merger.rs
expression: config.to_sdl()
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com", httpCache: 42) {
  query: Query
}

type F2 {
  user: [User]
}

type F3 {
  user: User
}

type Query {
  user(id: Int!): F3 @http(path: "/users/{{.args.id}}")
  users: F2 @http(path: "/users")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
}
